--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,15 @@
       <artifactId>fastjson</artifactId>
       <version>1.2.49</version>
     </dependency>
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+      </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+    </dependency>
+
   </dependencies>
 
   <build>
