--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   <groupId>CSE312</groupId>
   <artifactId>demo</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <packaging>jar</packaging>
   <name>demo</name>
   <description>Demo project for Spring Boot</description>
   <properties>
@@ -78,6 +79,10 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-mongodb</artifactId>
     </dependency>
 
   </dependencies>
