--- a/Frontend/312client/Dockerfile
+++ b/Frontend/312client/Dockerfile
@@ -1,12 +1,7 @@
-FROM node:7
+FROM node:11.10.1
 WORKDIR /app
 COPY package.json /app
-RUN npm install
+RUN yarn install
 COPY . /app
-#CMD node index.js
-#EXPOSE 8000
-
-ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.2.1/wait /wait
-RUN chmod +x /wait
-
-CMD /wait && node index.js
+CMD yarn serve
+EXPOSE 8080
