Complete Dockerfile and Docker Compose via frontend/backend/db

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,15 @@ version: '3.3'
 services:
   mongo:
     image: mongo:4.2.5
-  app:
+  backend:
     build: .
     environment:
       WAIT_HOSTS: mongo:27017
     ports:
       - '8080:8080'
+  frontend:
+    build: ./Frontend/312client
+    ports:
+    - '8081:8080'
+    depends_on:
+      - backend
